...
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/alarm_container_card_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_grey50"
                android:orientation="vertical">

                <!-- description container -->
...
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/about_reminder"
                            android:textColor="@color/common_black58"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/alarm_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/alarm_type_text"
                            android:layout_below="@id/alarm_type_text"
                            android:layout_marginBottom="26dp"
                            android:layout_marginEnd="20dp"
...
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <EditText
                                    android:id="@+id/minute"
                                    android:layout_width="90dp"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLength="2"
                                    android:selectAllOnFocus="true"
                                    android:textAlignment="center"
...
                            android:layout_below="@id/alarm_days_text"
                            android:layout_marginStart="28dp"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ToggleButton
                                android:id="@+id/monday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginEnd="8dp"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
...
                                android:textOn="@string/thursday"
                                android:textSize="18sp" />

                            <include layout="@layout/divider" />

                            <ToggleButton
                                android:id="@+id/friday_tb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginEnd="8dp"
                                android:background="@null"
                                android:drawableStart="?android:attr/listChoiceIndicatorSingle"
...
        android:visibility="gone"
        app:backgroundTint="@color/common_white"
        app:layout_anchor="@id/alarm_time_container"
        app:layout_anchorGravity="top|end" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_step_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        app:backgroundTint="@color/common_white"
...
