<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fab_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/common_white12"
            android:elevation="5dp"
            android:gravity="center|end"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/create_alarm_buttons_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/create_alarm_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/common_blueA700"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/add_new_alarm"
                    android:textAllCaps="false"
                    android:textColor="@color/common_white87"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/create_alarm_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_alarm_white_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_reminder_buttons_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/create_reminder_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/common_blueA700"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/add_new_reminder"
                    android:textAllCaps="false"
                    android:textColor="@color/common_white87"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/create_reminder_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/ic_notifications_blck_24dp" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/common_toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/date_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextClock
                        android:id="@+id/date_minimized"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:format12Hour="kk:mm EEEE, d MMMM"
                        android:format24Hour="kk:mm EEEE, d MMMM"
                        android:textColor="@color/common_black"
                        android:textSize="24sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/date_expanded_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextClock
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:fontFamily="sans-serif-light"
                            android:format12Hour="kk:mm"
                            android:format24Hour="kk:mm"
                            android:letterSpacing="0"
                            android:textColor="@color/common_black"
                            android:textSize="112sp" />

                        <TextClock
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-medium"
                            android:format12Hour="EEEE, d MMMM"
                            android:format24Hour="EEEE, d MMMM"
                            android:textColor="@color/common_black"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/no_alarms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="180dp"
                        android:layout_marginEnd="30dp"
                        android:gravity="center"
                        android:text="@string/no_alarms"
                        android:textSize="20sp"
                        android:visibility="gone" />

                </LinearLayout>

                <ListView
                    android:id="@+id/alarms_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/date_container"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:divider="@color/common_transparent"
                    android:dividerHeight="0dp"
                    android:paddingBottom="120dp" />

            </RelativeLayout>

        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

    <com.katsuna.commons.controls.KatsunaNavigationView
        android:id="@+id/katsuna_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>